corrigiendo error en package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://nonochica.github.io/movie-search.git" ,
+  "homepage": "https://nonochica.github.io/movie-search" ,
   "name": "buscador-peliculas",
   "version": "0.1.0",
   "private": true,
