eliminando /build del git-ignore

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nonochica.github.io/movie-search" ,
+  "homepage": "https://nonochica.github.io/" ,
   "name": "buscador-peliculas",
   "version": "0.1.0",
   "private": true,
