Cambios en App.js y package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nonochica.github.io/" ,
+  "homepage": "https://nonochica.github.io/buscador-peliculas" ,
   "name": "buscador-peliculas",
   "version": "0.1.0",
   "private": true,
