Cambios git pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nonochica.github.com/movie-search" ,
+  "homepage": "https://nonochica.github.io/movie-search" ,
   "name": "movie-search",
   "version": "0.1.0",
   "private": true,
